docs: 规范输出返回类型
