# server/wcf-api/controller.go
@@ -35,7 +35,7 @@ func initService() {
 
 // @Summary 检查登录状态
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} bool
 // @Router /is_login [get]
 func isLogin(c *gin.Context) {
 
@@ -45,7 +45,7 @@ func isLogin(c *gin.Context) {
 
 // @Summary 获取登录账号wxid
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} string
 // @Router /self_wxid [get]
 func getSelfWxid(c *gin.Context) {
 
@@ -55,7 +55,7 @@ func getSelfWxid(c *gin.Context) {
 
 // @Summary 获取登录账号个人信息
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} wcf.UserInfo
 // @Router /user_info [get]
 func getUserInfo(c *gin.Context) {
 
@@ -65,7 +65,7 @@ func getUserInfo(c *gin.Context) {
 
 // @Summary 获取所有消息类型
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} map[int32]string
 // @Router /msg_types [get]
 func getMsgTypes(c *gin.Context) {
 
@@ -75,7 +75,7 @@ func getMsgTypes(c *gin.Context) {
 
 // @Summary 获取完整通讯录
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} []wcf.RpcContact
 // @Router /contacts [get]
 func getContacts(c *gin.Context) {
 
@@ -85,7 +85,7 @@ func getContacts(c *gin.Context) {
 
 // @Summary 获取好友列表
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} []wcf.RpcContact
 // @Router /friends [get]
 func getFriends(c *gin.Context) {
 
@@ -95,7 +95,7 @@ func getFriends(c *gin.Context) {
 
 // @Summary 获取数据库列表
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} []string
 // @Router /db_names [get]
 func getDbNames(c *gin.Context) {
 
@@ -106,7 +106,7 @@ func getDbNames(c *gin.Context) {
 // @Summary 获取数据库表列表
 // @Produce json
 // @Param db path string true "数据库名"
-// @Success 200 {object} gin.H
+// @Success 200 {object} []wcf.DbTable
 // @Router /db_tables/{db} [get]
 func getDbTables(c *gin.Context) {
 
@@ -118,18 +118,22 @@ func getDbTables(c *gin.Context) {
 // @Summary 刷新朋友圈
 // @Produce json
 // @Param id path int true "朋友圈id"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /refresh_pyq/{id} [get]
 func refreshPyq(c *gin.Context) {
 
 	id := cast.ToUint64(c.Param("id"))
-	c.Set("Payload", wc.CmdClient.RefreshPyq(id))
+	status := wc.CmdClient.RefreshPyq(id)
+
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
+	})
 
 }
 
 // @Summary 获取群列表
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} []wcf.RpcContact
 // @Router /chatrooms [get]
 func getChatRooms(c *gin.Context) {
 
@@ -140,7 +144,7 @@ func getChatRooms(c *gin.Context) {
 // @Summary 获取群成员列表
 // @Produce json
 // @Param roomid path string true "群id"
-// @Success 200 {object} gin.H
+// @Success 200 {object} []wcf.RpcContact
 // @Router /chatroom_members/{roomid} [get]
 func getChatRoomMembers(c *gin.Context) {
 
@@ -153,7 +157,7 @@ func getChatRoomMembers(c *gin.Context) {
 // @Produce json
 // @Param wxid path string true "wxid"
 // @Param roomid path string true "群id"
-// @Success 200 {object} gin.H
+// @Success 200 {object} string
 // @Router /alias_in_chatroom/{wxid}/{roomid} [get]
 func getAliasInChatRoom(c *gin.Context) {
 
@@ -165,87 +169,77 @@ func getAliasInChatRoom(c *gin.Context) {
 
 // @Summary 发送文本消息
 // @Produce json
-// @Accept json
 // @Param body body wcf.TextMsg true "文本消息请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /send_txt [post]
 func sendTxt(c *gin.Context) {
 
 	var req wcf.TextMsg
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.SendTxt(req.Msg, req.Receiver, req.Aters)
 
-	c.Set("Payload", gin.H{
-		"success": status == 0,
+	c.Set("Payload", ActionStatus{
+		Success: status == 0,
 	})
 
 }
 
 // @Summary 发送图片消息
 // @Produce json
-// @Accept json
 // @Param body body wcf.PathMsg true "图片消息请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /send_img [post]
 func sendImg(c *gin.Context) {
 
 	var req wcf.PathMsg
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.SendImg(req.Path, req.Receiver)
 
-	c.Set("Payload", gin.H{
-		"success": status == 0,
+	c.Set("Payload", ActionStatus{
+		Success: status == 0,
 	})
 
 }
 
 // @Summary 发送文件消息
 // @Produce json
-// @Accept json
 // @Param body body wcf.PathMsg true "文件消息请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /send_file [post]
 func sendFile(c *gin.Context) {
 
 	var req wcf.PathMsg
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.SendFile(req.Path, req.Receiver)
 
-	c.Set("Payload", gin.H{
-		"success": status == 0,
+	c.Set("Payload", ActionStatus{
+		Success: status == 0,
 	})
 
 }
 
-// 数据库查询参数
-type DbSqlQueryRequest struct {
-	Db  string `json:"db"`
-	Sql string `json:"sql"`
-}
-
 // @Summary 执行数据库查询
 // @Produce json
-// @Accept json
 // @Param body body DbSqlQueryRequest true "数据库查询请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /db_query_sql [post]
 func dbSqlQuery(c *gin.Context) {
 
 	var req DbSqlQueryRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
@@ -255,130 +249,119 @@ func dbSqlQuery(c *gin.Context) {
 
 // @Summary 接受好友请求
 // @Produce json
-// @Accept json
 // @Param body body wcf.Verification true "接受好友请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /accept_new_friend [post]
 func acceptNewFriend(c *gin.Context) {
 
 	var req wcf.Verification
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.AcceptNewFriend(req.V3, req.V4, req.Scene)
 
-	c.Set("Payload", gin.H{
-		"success": status == 1,
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
 	})
 
 }
 
 // @Summary 接受转账
 // @Produce json
-// @Accept json
 // @Param body body wcf.Transfer true "接受转账请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /receive_transfer [post]
 func receiveTransfer(c *gin.Context) {
 
 	var req wcf.Transfer
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.ReceiveTransfer(req.Wxid, req.Tfid, req.Taid)
 
-	c.Set("Payload", gin.H{
-		"success": status == 1,
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
 	})
 
 }
 
 // @Summary 添加群成员
 // @Produce json
-// @Accept json
 // @Param body body wcf.AddMembers true "增删群成员请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /add_chatroom_members [post]
 func addChatRoomMembers(c *gin.Context) {
 
 	var req wcf.AddMembers
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.AddChatRoomMembers(req.Roomid, req.Wxids)
 
-	c.Set("Payload", gin.H{
-		"success": status == 1,
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
 	})
 
 }
 
 // @Summary 删除群成员
 // @Produce json
-// @Accept json
 // @Param body body wcf.AddMembers true "增删群成员请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /del_chatroom_members [post]
 func delChatRoomMembers(c *gin.Context) {
 
 	var req wcf.AddMembers
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.DelChatRoomMembers(req.Roomid, req.Wxids)
 
-	c.Set("Payload", gin.H{
-		"success": status == 1,
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
 	})
 
 }
 
 // @Summary 解密图片
 // @Produce json
-// @Accept json
 // @Param body body wcf.DecPath true "解密图片请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /decrypt_image [post]
 func decryptImage(c *gin.Context) {
 
 	var req wcf.DecPath
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
 	status := wc.CmdClient.DecryptImage(req.Src, req.Dst)
 
-	c.Set("Payload", gin.H{
-		"success": status == 1,
+	c.Set("Payload", ActionStatus{
+		Success: status == 1,
 	})
 
 }
 
-// 消息转发参数
-type ForwardMsgRequest struct {
-	Url string `json:"url"`
-}
-
 // @Summary 开启消息转发
 // @Produce json
-// @Accept json
 // @Param body body ForwardMsgRequest true "消息转发请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /enable_forward_msg [post]
 func enableForwardMsg(c *gin.Context) {
 
 	var req ForwardMsgRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.Set("Payload", err)
+		c.Set("Error", err)
 		return
 	}
 
@@ -389,26 +372,25 @@ func enableForwardMsg(c *gin.Context) {
 
 	error := wc.EnrollReceiver(true, cb)
 
-	c.Set("Payload", gin.H{
-		"success": error == nil,
-		"error":   error,
+	c.Set("Payload", ActionStatus{
+		Success: error == nil,
+		Error:   error,
 	})
 
 }
 
 // @Summary 关闭消息转发
 // @Produce json
-// @Accept json
 // @Param body body ForwardMsgRequest true "消息转发请求参数"
-// @Success 200 {object} gin.H
+// @Success 200 {object} ActionStatus
 // @Router /disable_forward_msg [post]
 func disableForwardMsg(c *gin.Context) {
 
 	error := wc.DisableReceiver()
 
-	c.Set("Payload", gin.H{
-		"success": error == nil,
-		"error":   error,
+	c.Set("Payload", ActionStatus{
+		Success: error == nil,
+		Error:   error,
 	})
 
 }
